# reader

./: CMakeLists.txt  LICENSE  README.md  Reader.cpp  Reader.h
lib/: CMakeLists.txt
lib/include/reader/: Reader.h
test/: CMakeLists.txt  Test.cpp
